# diffusions

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXPLORATION_MODES.md  Makefile  PHOTOGRAPHY_STUDIO.md  README.md  WHATS_NEW.md  app.py  mypy.ini  performance_analysis.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/test_images/: README.md
docs/: diffusion_art_experiments.md  exploration_api.md  photography_studio_example.md
docs/source/: conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: core.rst  index.rst  models.rst
reference_docs/: ARCHITECTURE.md
src/diffusion_art/: __init__.py
src/diffusion_art/animation/: __init__.py  engine.py  generators.py  renderers.py  types.py
src/diffusion_art/config/: __init__.py  features.py
src/diffusion_art/core/: exploration.py  interpolation.py  noise.py  pca_traversal.py  random_walk.py
src/diffusion_art/models/: vae.py
src/diffusion_art/optimization/: __init__.py  keyframe_renderer.py  profiler.py  vae_optimizer.py
src/diffusion_art/ui/: __init__.py  breathing_tab.py  controllers.py  interpolation_tab.py  photography_tab.py
src/diffusion_art/utils/: __init__.py  presets.py
tests/integration/: test_keyframe_speedup.py
tests/unit/animation/: __init__.py  test_engine.py  test_generators.py  test_types.py
tests/unit/core/: test_interpolation.py
tests/unit/models/: test_vae.py
